# ipfusch

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/ipfusch-bench/: Cargo.toml
crates/ipfusch-bench/benches/: codec.rs
crates/ipfusch-cli/: Cargo.toml
crates/ipfusch-cli/src/: main.rs
crates/ipfusch-core/: Cargo.toml
crates/ipfusch-core/src/: config.rs  error.rs  lib.rs  protocol.rs  report.rs
crates/ipfusch-engine/: Cargo.toml
crates/ipfusch-engine/src/: lib.rs
crates/ipfusch-engine/tests/: integration_consistency.rs
crates/ipfusch-net/: Cargo.toml
crates/ipfusch-net/certs/: dev-cert.pem  dev-key.pem
crates/ipfusch-net/src/: client.rs  lib.rs  server.rs
crates/ipfusch-tui/: Cargo.toml
crates/ipfusch-tui/src/: lib.rs
scripts/: benchmark-vs-iperf.py  run-ipfusch.sh
