[workspace]
members = [
  "crates/ipfusch-cli",
  "crates/ipfusch-core",
  "crates/ipfusch-net",
  "crates/ipfusch-engine",
  "crates/ipfusch-tui",
  "crates/ipfusch-bench",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "BSD-2-Clause"
authors = ["ipfusch contributors"]

[workspace.dependencies]
anyhow = "1.0"
bincode = "1.3"
bytes = "1.10"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
crossterm = { version = "0.29", features = ["event-stream"] }
criterion = { version = "0.6", features = ["html_reports"] }
futures = "0.3"
hdrhistogram = "7.5"
humantime = "2.3"
indicatif = "0.17"
quinn = "0.11"
rand = "0.9"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
rustls = { version = "0.23", features = ["ring", "std"] }
rustls-pemfile = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "macros", "serde"] }
tokio = { version = "1.48", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
