[package]
name = "ipfusch-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "ipfusch"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
humantime.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true

ipfusch-core = { path = "../ipfusch-core" }
ipfusch-engine = { path = "../ipfusch-engine" }
ipfusch-net = { path = "../ipfusch-net" }
ipfusch-tui = { path = "../ipfusch-tui" }
