[package]
name = "ipfusch-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
hdrhistogram.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

ipfusch-core = { path = "../ipfusch-core" }
ipfusch-net = { path = "../ipfusch-net" }
