[package]
name = "ipfusch-net"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
bytes.workspace = true
futures.workspace = true
quinn.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
sha2.workspace = true
tokio.workspace = true

ipfusch-core = { path = "../ipfusch-core" }
