[package]
name = "ipfusch-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
futures.workspace = true
ratatui.workspace = true
serde_json.workspace = true
tokio.workspace = true

ipfusch-core = { path = "../ipfusch-core" }
